<resources>
    <string name="app_name">Treeki</string>
    <string name="skip_qotd">Skip</string>
    <string name="skip_journal">Skip</string>
    <string name="submit">Submit</string>
    <string name="answer">Answer</string>
    <string name="journal_answer">Daily Journal</string>
    <string name="question_of_the_day">Question of the Day</string>

    <string name="qotd">QoTD</string>

    <string name="journal">Journal</string>
    <string name="logout">Logout</string>
    <string name="today">How was your day?</string>
    <string name="tags">Tags:</string>
    <string name="comma_separated">Comma separated</string>
    <string name="priv">Private</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="save">Save</string>
    <string name="fav">Favorite</string>
    <string name="contin">Continue</string>



    <string-array name="rating">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
    </string-array>
    <string name="title_activity_main_menu_test">MainMenuTest</string>
    <string name="title_activity_calendar">CalendarActivity</string>

</resources>
